Basic setup of Tamagui

--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.4.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tamagui/config": "^1.123.5",
+    "@tamagui/metro-plugin": "^1.123.5",
     "bootstrap": "^5.3.3",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
@@ -38,12 +43,16 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "tamagui": "^1.123.5",
+    "yarm": "^0.4.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
