Added a basic page for index, apartments, and inspection. Reconfigured the tamagui.config file as well so we have a nice looking layout

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "Tergo",
     "version": "1.0.0",
     "orientation": "portrait",
+    "main": "./App.tsx",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
