--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/devtools": "^7.0.15",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "@tamagui/config": "^1.123.5",
     "@tamagui/metro-plugin": "^1.123.5",
     "bootstrap": "^5.3.3",
@@ -42,6 +44,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
@@ -56,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
